--- a/package.json
+++ b/package.json
@@ -5,21 +5,31 @@
   "version": "0.1.0",
   "author": "Blake Noll <nollblake@gmail.com>",
   "dependencies": {
+    "@styled-system/theme-get": "^5.1.2",
+    "autoprefixer": "^10.1.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "framer-motion": "^3.1.1",
     "gatsby": "^2.19.12",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^3.0.18",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.8",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-source-wordpress-experimental": "^6.0.0",
     "gatsby-transformer-sharp": "^2.3.16",
+    "postcss": "^8.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "styled-system": "^5.1.5",
+    "tailwindcss": "^2.0.2",
+    "twin.macro": "^2.0.7"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
