--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "author": "Blake Noll <nollblake@gmail.com>",
   "dependencies": {
     "@popmotion/popcorn": "^0.4.4",
+    "@reduxjs/toolkit": "^1.5.0",
     "@styled-system/theme-get": "^5.1.2",
     "autoprefixer": "^10.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "framer-motion": "^3.1.1",
-    "gatsby": "^2.19.12",
+    "gatsby": "^2.31.1",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.1.1",
@@ -27,6 +28,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-redux": "^7.2.2",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^4.4.0",
     "styled-system": "^5.1.5",
     "tailwindcss": "^2.0.2",
