--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "autoprefixer": "^10.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "framer-motion": "^3.1.1",
-    "gatsby": "^2.31.1",
+    "gatsby": "^2.32.8",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.1.1",
@@ -21,13 +21,14 @@
     "gatsby-plugin-sharp": "^2.2.8",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-source-wordpress-experimental": "^6.0.0",
+    "gatsby-source-wordpress": "^4.0.3",
     "gatsby-transformer-sharp": "^2.3.16",
     "postcss": "^8.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
