--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "@popmotion/popcorn": "^0.4.4",
     "@reduxjs/toolkit": "^1.5.0",
     "@styled-system/theme-get": "^5.1.2",
+    "@tippyjs/react": "^4.2.5",
     "autoprefixer": "^10.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "framer-motion": "^3.1.1",
-    "gatsby": "^2.32.8",
+    "gatsby": "^3.2.1",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^3.0.18",
-    "gatsby-plugin-postcss": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sharp": "^2.2.8",
-    "gatsby-plugin-styled-components": "^3.1.11",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-source-wordpress": "^4.0.5",
-    "gatsby-transformer-sharp": "^2.3.16",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-postcss": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-styled-components": "^4.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-wordpress": "^5.2.1",
+    "gatsby-transformer-sharp": "^3.2.0",
     "postcss": "^8.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -32,6 +33,7 @@
     "react-redux": "^7.2.2",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "screenfull": "^5.1.0",
     "styled-components": "^4.4.0",
     "styled-system": "^5.1.5",
     "tailwindcss": "^2.0.2",
